--- a/index.html
+++ b/index.html
@@ -15,27 +15,48 @@
         <div class="navbar_right">
             <div class="navbar_items">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="" class="active">Home</a></li>
                     <li><a href="">Services</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container">
-        <h1>
-            <span>Welcome...</span>
-        </h1>
-        <div class="home">
-            <div class="home_left">
-            </div>
-            <div class="home_right">
-            </div>
-        </div>
-        <div class="services">
-        </div>
-        <div class="about">
 
+        <div class="page">
+            <div class="page_1">
+                <h1>I came, I saw, I Will Conquer</h1>
+            </div>
+        </div>
+
+        <div class="page">
+                <div class="page_2">
+                    <p><span>Hello</span> I am Anseef,a Bachelor's in Computer Science student who is passionate about technology and programming. I have always been intrigued by the power of computers and how they can be used to solve complex problems. My interest in computer science led me to pursue a degree in this field, and I am excited to learn about the latest advancements in technology.</p>
+                </div>
+            </div>
+        <div class="page">
+            <div class="page_3">
+                <h1><span>W</span>ebsite Designs</h1>
+                <div class="works">
+                    <div class="work_1">
+                        <div class="img">
+                            <img src="images/NetflixLoginPage1.png">
+                        </div>
+                    </div>
+                    <div class="work_2">
+                        <div class="img">
+                            <img src="images/Login-Page.png">
+                        </div>
+                    </div>
+                </div>     
+            </div>
+        </div>
+        <div class="page">
+            <div class="page_4">
+                <h1><span>C</span>ontact Me</h1>
+            </div>
+            
         </div>
     </div>
 </body>
