Personal Website Created[not resposive]

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
         <div class="navbar_right">
             <div class="navbar_items">
                 <ul>
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#1" class="active">Home</a></li>
+                    <li><a href="#2">Services</a></li>
+                    <li><a href="#3">Contact</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container">
-
-        <div class="page">
+        <div class="page" id="1">
             <div class="page_1">
                 <h1>I came, I saw, I Will Conquer</h1>
             </div>
@@ -36,7 +35,7 @@
                 </div>
             </div>
         <div class="page">
-            <div class="page_3">
+            <div class="page_3" id="2">
                 <h1><span>W</span>ebsite Designs</h1>
                 <div class="works">
                     <div class="work_1">
@@ -53,11 +52,21 @@
             </div>
         </div>
         <div class="page">
-            <div class="page_4">
+            <div class="page_4" id="3">
                 <h1><span>C</span>ontact Me</h1>
             </div>
-            
+            <div class="contact_content">
+                <p>
+                    For more Feedback contact me.
+                </p>   
+                <div class="contact_social">
+                    <a href="https://www.instagram.com/ansifansari_/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/Anseef"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://twitter.com/AnsiFansari"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/5b62121174.js" crossorigin="anonymous"></script>
 </body>
 </html>
