Some Alignment Modification

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <div class="navbar_left">
-            <div class="logo"><span>.D</span>ONEi<span>t</span></div>
+            <div class="logo"><span>.D</span>ONE.iT</div>
         </div>
         <div class="navbar_right">
             <div class="navbar_items">
@@ -31,11 +31,11 @@
 
         <div class="page">
                 <div class="page_2">
-                    <p><span>Hello</span> I am Anseef,a Bachelor's in Computer Science student who is passionate about technology and programming. I have always been intrigued by the power of computers and how they can be used to solve complex problems. My interest in computer science led me to pursue a degree in this field, and I am excited to learn about the latest advancements in technology.</p>
+                    <p><span>Hello</span> I am Anseef, A Bachelor's in Computer Science student who is passionate about technology and programming. I have always been intrigued by the power of computers and how they can be used to solve complex problems. My interest in computer science led me to pursue a degree in this field, and I am excited to learn about the latest advancements in technology.</p>
                 </div>
             </div>
-        <div class="page">
-            <div class="page_3" id="2">
+        <div class="page" id="2">
+            <div class="page_3">
                 <h1><span>W</span>ebsite Designs</h1>
                 <div class="works">
                     <div class="work_1">
@@ -54,15 +54,15 @@
         <div class="page">
             <div class="page_4" id="3">
                 <h1><span>C</span>ontact Me</h1>
-            </div>
-            <div class="contact_content">
-                <p>
-                    For more Feedback contact me.
-                </p>   
-                <div class="contact_social">
-                    <a href="https://www.instagram.com/ansifansari_/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://github.com/Anseef"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://twitter.com/AnsiFansari"><i class="fa-brands fa-twitter"></i></a>
+                <div class="contact_content">
+                    <p>
+                    For More Feedback Contact me.
+                    </p>   
+                     <div class="contact_social">
+                        <a href="https://www.instagram.com/ansifansari_/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/Anseef"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://twitter.com/AnsiFansari"><i class="fa-brands fa-twitter"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
